# raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  objects.cpp  objects.h  scene.h  utility.cpp  utility.h  viewport.cpp  xmlload.cpp
